Blocking a user is now made with AJAX
