# resources/views/partials/user_card.blade.php
@@ -9,8 +9,9 @@
     </div>
     @if($adminView)
     <div class="order-3 space-x-8">
-
-        <a class="block-reason-trigger" cursor:pointer" href="/users/{{$user->username}}/block" {{$user->is_app_banned() ? 'hidden' : ''}}>Block</a>
+        <button class="block-reason-trigger" {{$user->is_app_banned() ? 'hidden' : ''}}>
+            Block
+        </button>
         <button class="unblock-confirmation-trigger" {{!$user->is_app_banned() ? 'hidden' : ''}}>
             Unblock </button>
         <button class="delete-confirmation-trigger">
